<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/moccasin">


    <TextView
        android:id="@+id/statusBestiary24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="serif"
        android:text="@string/waitBetiary24"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/statusBestiary14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="serif"
        android:text="@string/waitBetiary14"
        android:textColor="@color/black"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/statusSpells24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="serif"
        android:text="@string/waitSpells24"
        android:textColor="@color/black"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/statusSpells14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="serif"
        android:text="@string/waitSpells14"
        android:textColor="@color/black"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/thistle"
        android:fontFamily="serif"
        android:text="@string/thanks"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:cornerRadius="0dp"/>

</LinearLayout>