<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/moccasin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/main_name_1"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/main_name_2"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_name_1" />

    <Button
        android:id="@+id/button_bestiary"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/thistle"
        android:fontFamily="serif"
        android:text="@string/button_bestiary"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_name_2" />

    <Button
        android:id="@+id/button_spells"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="@color/thistle"
        android:fontFamily="serif"
        android:text="@string/button_spells"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bestiary" />

    <Button
        android:id="@+id/button_mech"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="@color/thistle"
        android:fontFamily="serif"
        android:text="@string/button_mech"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_spells" />

</androidx.constraintlayout.widget.ConstraintLayout>