<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/moccasin">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/sandybrown"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/thistle"
        android:fontFamily="serif"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/searchBestiaryView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
            android:id="@+id/filterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/moccasin"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/filter"
            app:layout_constraintBottom_toTopOf="@+id/searchBestiaryView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/bestiary5e14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/bestiary14"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/bestiarySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/bestiary5e24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/bestiary24"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    <SearchView
        android:id="@+id/searchBestiaryView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/filterLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bestiaryView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBestiaryView" />
</androidx.constraintlayout.widget.ConstraintLayout>